--- a/template-split/package.json
+++ b/template-split/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "template-split",
+    "name": "carnival-cruises",
     "siteUrl": "",
     "version": "0.0.1",
     "dependencies": {
