Revert "add split tag"
This reverts commit 85bc2355bc54a54e449560e8599ea0ba0562a342.

--- a/template-split/package.json
+++ b/template-split/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "carnival-cruises",
+    "name": "template-split",
     "siteUrl": "",
     "version": "0.0.1",
     "dependencies": {
